Google Chome OS Patch: makefile-fixes.patch
This fixes up makefiles so they work in the Chrome OS build
environment. In particular:
1. Add $(CPPFLAGS) to compiler invocations.
2. Replace bare ar invocation with $(AR) for cross compilation.
3. Add additional flags to silence warnings generated by clang.
4. Remove emptry call to STRIP.

--- a/Source/Common/Crypt/makefile
+++ b/Source/Common/Crypt/makefile
@@ -38,10 +38,10 @@ vpath %.h $(INCLUDE_DIRS)
 all: libcrypt.a
 
 $(OBJFILES): %.o: %.c
-	$(CC) -c $(CFLAGS) $(FPACK) $(INCLUDES) $< -o $@
+	$(CC) -c $(CPPFLAGS) $(CFLAGS) $(FPACK) $(INCLUDES) $< -o $@
 
 libcrypt.a: $(OBJFILES)
-	ar $(ARFLAGS) $@ $^
+	$(AR) $(ARFLAGS) $@ $^
 
 clean:
 	rm -rfv *.o libcrypt.a
