--- a/Source/Common/FileIO/makefile
+++ b/Source/Common/FileIO/makefile
@@ -37,10 +37,10 @@ vpath %.h $(INCLUDE_DIRS)
 all: libfileio.a
 
 $(OBJFILES): %.o: %.c
-	$(CC) -c $(CFLAGS) $(FPACK) $(INCLUDES) $< -o $@
+	$(CC) -c $(CPPFLAGS) $(CFLAGS) $(FPACK) $(INCLUDES) $< -o $@
 
 libfileio.a: $(OBJFILES)
-	ar $(ARFLAGS) $@ $^
+	$(AR) $(ARFLAGS) $@ $^
 
 clean:
 	rm -rfv *.o libfileio.a
